--- a/snipper-web/pom.xml
+++ b/snipper-web/pom.xml
@@ -132,6 +132,11 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>velocity-tools</groupId>
+            <artifactId>velocity-tools</artifactId>
+        </dependency>
+
 
     </dependencies>
 
