--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,12 @@
                 <version>2.6.3</version>
             </dependency>
 
+            <dependency>
+                <groupId>velocity-tools</groupId>
+                <artifactId>velocity-tools</artifactId>
+                <version>1.4</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
