--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,18 @@
                 <version>${spring.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.ibatis</groupId>
+                <artifactId>ibatis-sqlmap</artifactId>
+                <version>2.3.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.17</version>
+            </dependency>
+
             <!-- ================================================= -->
             <!-- 日志及相关依赖（用slf4j+logback代替jcl+log4j） -->
             <!-- ================================================= -->
